// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StoreLocatorList stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="mt-4"
  >
    <div
      class="mb-4"
    >
      <div
        class="text-lg font-semibold flex justify-center items-center text-center"
      >
        Viewing stores within 100 km of 94102 in United States
      </div>
      <div
        class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px mt-4"
        data-orientation="horizontal"
        data-slot="separator"
        role="none"
      />
    </div>
    <div
      aria-required="false"
      class="grid gap-3"
      data-slot="radio-group"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <ul>
        <li
          class="py-3"
        >
          <label
            class="flex items-start gap-3"
            for="selectedStore-_r_0_-store-1"
          >
            <button
              aria-checked="false"
              aria-describedby="store-info-store-1"
              class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 mt-1"
              data-radix-collection-item=""
              data-slot="radio-group-item"
              data-state="unchecked"
              id="selectedStore-_r_0_-store-1"
              role="radio"
              tabindex="-1"
              type="button"
              value="store-1"
            />
            <div
              class="grid grid-cols-2 gap-2 md:grid-cols-[260px_1fr_auto]"
              id="store-info-store-1"
            >
              <div
                class="col-span-1"
              >
                <div
                  class="text-lg font-semibold text-left"
                >
                  Downtown Store
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-1 md:col-start-2"
              >
                <div
                  class="text-sm text-muted-foreground text-left"
                >
                  <div>
                    123 Main Street
                  </div>
                  <div>
                    San Francisco, CA 94102
                  </div>
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-1 md:col-start-1 md:mt-2"
              >
                <div
                  class="text-muted-foreground text-left text-xs flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-map-pin size-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                    />
                    <circle
                      cx="12"
                      cy="10"
                      r="3"
                    />
                  </svg>
                  2.50 km away
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-2 md:col-start-2"
              >
                <div
                  class="w-full"
                  data-orientation="vertical"
                  data-slot="accordion"
                >
                  <div
                    class="border-b last:border-b-0 border-none"
                    data-orientation="vertical"
                    data-slot="accordion-item"
                    data-state="closed"
                  >
                    <h3
                      class="flex"
                      data-orientation="vertical"
                      data-state="closed"
                    >
                      <button
                        aria-controls="radix-_r_3_"
                        aria-expanded="false"
                        class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-sm font-semibold text-primary hover:text-primary/80 py-2 px-0"
                        data-orientation="vertical"
                        data-radix-collection-item=""
                        data-slot="accordion-trigger"
                        data-state="closed"
                        id="radix-_r_2_"
                        type="button"
                      >
                        Store Details
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </h3>
                    <div
                      aria-labelledby="radix-_r_2_"
                      class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                      data-orientation="vertical"
                      data-slot="accordion-content"
                      data-state="closed"
                      hidden=""
                      id="radix-_r_3_"
                      role="region"
                      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </label>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px my-3"
            data-orientation="horizontal"
            data-slot="separator"
            role="none"
          />
        </li>
        <li
          class="py-3"
        >
          <label
            class="flex items-start gap-3"
            for="selectedStore-_r_0_-store-2"
          >
            <button
              aria-checked="false"
              aria-describedby="store-info-store-2"
              class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 mt-1"
              data-radix-collection-item=""
              data-slot="radio-group-item"
              data-state="unchecked"
              id="selectedStore-_r_0_-store-2"
              role="radio"
              tabindex="-1"
              type="button"
              value="store-2"
            />
            <div
              class="grid grid-cols-2 gap-2 md:grid-cols-[260px_1fr_auto]"
              id="store-info-store-2"
            >
              <div
                class="col-span-1"
              >
                <div
                  class="text-lg font-semibold text-left"
                >
                  Uptown Store
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-1 md:col-start-2"
              >
                <div
                  class="text-sm text-muted-foreground text-left"
                >
                  <div>
                    456 Oak Avenue
                  </div>
                  <div>
                    San Francisco, CA 94103
                  </div>
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-1 md:col-start-1 md:mt-2"
              >
                <div
                  class="text-muted-foreground text-left text-xs flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-map-pin size-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                    />
                    <circle
                      cx="12"
                      cy="10"
                      r="3"
                    />
                  </svg>
                  5.20 km away
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-2 md:col-start-2"
              >
                <div
                  class="w-full"
                  data-orientation="vertical"
                  data-slot="accordion"
                >
                  <div
                    class="border-b last:border-b-0 border-none"
                    data-orientation="vertical"
                    data-slot="accordion-item"
                    data-state="closed"
                  >
                    <h3
                      class="flex"
                      data-orientation="vertical"
                      data-state="closed"
                    >
                      <button
                        aria-controls="radix-_r_6_"
                        aria-expanded="false"
                        class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-sm font-semibold text-primary hover:text-primary/80 py-2 px-0"
                        data-orientation="vertical"
                        data-radix-collection-item=""
                        data-slot="accordion-trigger"
                        data-state="closed"
                        id="radix-_r_5_"
                        type="button"
                      >
                        Store Details
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </h3>
                    <div
                      aria-labelledby="radix-_r_5_"
                      class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                      data-orientation="vertical"
                      data-slot="accordion-content"
                      data-state="closed"
                      hidden=""
                      id="radix-_r_6_"
                      role="region"
                      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </label>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`StoreLocatorList stories snapshot > DesktopLayout story renders and matches snapshot 1`] = `
<div>
  <div
    class="mt-4"
  >
    <div
      class="mb-4"
    >
      <div
        class="text-lg font-semibold flex justify-center items-center text-center"
      >
        Viewing stores within 100 km of 94102 in United States
      </div>
      <div
        class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px mt-4"
        data-orientation="horizontal"
        data-slot="separator"
        role="none"
      />
    </div>
    <div
      aria-required="false"
      class="grid gap-3"
      data-slot="radio-group"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <ul>
        <li
          class="py-3"
        >
          <label
            class="flex items-start gap-3"
            for="selectedStore-_r_e_-store-1"
          >
            <button
              aria-checked="false"
              aria-describedby="store-info-store-1"
              class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 mt-1"
              data-radix-collection-item=""
              data-slot="radio-group-item"
              data-state="unchecked"
              id="selectedStore-_r_e_-store-1"
              role="radio"
              tabindex="-1"
              type="button"
              value="store-1"
            />
            <div
              class="grid grid-cols-2 gap-2 md:grid-cols-[260px_1fr_auto]"
              id="store-info-store-1"
            >
              <div
                class="col-span-1"
              >
                <div
                  class="text-lg font-semibold text-left"
                >
                  Downtown Store
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-1 md:col-start-2"
              >
                <div
                  class="text-sm text-muted-foreground text-left"
                >
                  <div>
                    123 Main Street
                  </div>
                  <div>
                    San Francisco, CA 94102
                  </div>
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-1 md:col-start-1 md:mt-2"
              >
                <div
                  class="text-muted-foreground text-left text-xs flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-map-pin size-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                    />
                    <circle
                      cx="12"
                      cy="10"
                      r="3"
                    />
                  </svg>
                  2.50 km away
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-2 md:col-start-2"
              >
                <div
                  class="w-full"
                  data-orientation="vertical"
                  data-slot="accordion"
                >
                  <div
                    class="border-b last:border-b-0 border-none"
                    data-orientation="vertical"
                    data-slot="accordion-item"
                    data-state="closed"
                  >
                    <h3
                      class="flex"
                      data-orientation="vertical"
                      data-state="closed"
                    >
                      <button
                        aria-controls="radix-_r_h_"
                        aria-expanded="false"
                        class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-sm font-semibold text-primary hover:text-primary/80 py-2 px-0"
                        data-orientation="vertical"
                        data-radix-collection-item=""
                        data-slot="accordion-trigger"
                        data-state="closed"
                        id="radix-_r_g_"
                        type="button"
                      >
                        Store Details
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </h3>
                    <div
                      aria-labelledby="radix-_r_g_"
                      class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                      data-orientation="vertical"
                      data-slot="accordion-content"
                      data-state="closed"
                      hidden=""
                      id="radix-_r_h_"
                      role="region"
                      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </label>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px my-3"
            data-orientation="horizontal"
            data-slot="separator"
            role="none"
          />
        </li>
        <li
          class="py-3"
        >
          <label
            class="flex items-start gap-3"
            for="selectedStore-_r_e_-store-2"
          >
            <button
              aria-checked="false"
              aria-describedby="store-info-store-2"
              class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 mt-1"
              data-radix-collection-item=""
              data-slot="radio-group-item"
              data-state="unchecked"
              id="selectedStore-_r_e_-store-2"
              role="radio"
              tabindex="-1"
              type="button"
              value="store-2"
            />
            <div
              class="grid grid-cols-2 gap-2 md:grid-cols-[260px_1fr_auto]"
              id="store-info-store-2"
            >
              <div
                class="col-span-1"
              >
                <div
                  class="text-lg font-semibold text-left"
                >
                  Uptown Store
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-1 md:col-start-2"
              >
                <div
                  class="text-sm text-muted-foreground text-left"
                >
                  <div>
                    456 Oak Avenue
                  </div>
                  <div>
                    San Francisco, CA 94103
                  </div>
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-1 md:col-start-1 md:mt-2"
              >
                <div
                  class="text-muted-foreground text-left text-xs flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-map-pin size-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                    />
                    <circle
                      cx="12"
                      cy="10"
                      r="3"
                    />
                  </svg>
                  5.20 km away
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-2 md:col-start-2"
              >
                <div
                  class="w-full"
                  data-orientation="vertical"
                  data-slot="accordion"
                >
                  <div
                    class="border-b last:border-b-0 border-none"
                    data-orientation="vertical"
                    data-slot="accordion-item"
                    data-state="closed"
                  >
                    <h3
                      class="flex"
                      data-orientation="vertical"
                      data-state="closed"
                    >
                      <button
                        aria-controls="radix-_r_k_"
                        aria-expanded="false"
                        class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-sm font-semibold text-primary hover:text-primary/80 py-2 px-0"
                        data-orientation="vertical"
                        data-radix-collection-item=""
                        data-slot="accordion-trigger"
                        data-state="closed"
                        id="radix-_r_j_"
                        type="button"
                      >
                        Store Details
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </h3>
                    <div
                      aria-labelledby="radix-_r_j_"
                      class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                      data-orientation="vertical"
                      data-slot="accordion-content"
                      data-state="closed"
                      hidden=""
                      id="radix-_r_k_"
                      role="region"
                      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </label>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`StoreLocatorList stories snapshot > MobileLayout story renders and matches snapshot 1`] = `
<div>
  <div
    class="mt-4"
  >
    <div
      class="mb-4"
    >
      <div
        class="text-lg font-semibold flex justify-center items-center text-center"
      >
        Viewing stores within 100 km of 94102 in United States
      </div>
      <div
        class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px mt-4"
        data-orientation="horizontal"
        data-slot="separator"
        role="none"
      />
    </div>
    <div
      aria-required="false"
      class="grid gap-3"
      data-slot="radio-group"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <ul>
        <li
          class="py-3"
        >
          <label
            class="flex items-start gap-3"
            for="selectedStore-_r_7_-store-1"
          >
            <button
              aria-checked="false"
              aria-describedby="store-info-store-1"
              class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 mt-1"
              data-radix-collection-item=""
              data-slot="radio-group-item"
              data-state="unchecked"
              id="selectedStore-_r_7_-store-1"
              role="radio"
              tabindex="-1"
              type="button"
              value="store-1"
            />
            <div
              class="grid grid-cols-2 gap-2 md:grid-cols-[260px_1fr_auto]"
              id="store-info-store-1"
            >
              <div
                class="col-span-1"
              >
                <div
                  class="text-lg font-semibold text-left"
                >
                  Downtown Store
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-1 md:col-start-2"
              >
                <div
                  class="text-sm text-muted-foreground text-left"
                >
                  <div>
                    123 Main Street
                  </div>
                  <div>
                    San Francisco, CA 94102
                  </div>
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-1 md:col-start-1 md:mt-2"
              >
                <div
                  class="text-muted-foreground text-left text-xs flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-map-pin size-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                    />
                    <circle
                      cx="12"
                      cy="10"
                      r="3"
                    />
                  </svg>
                  2.50 km away
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-2 md:col-start-2"
              >
                <div
                  class="w-full"
                  data-orientation="vertical"
                  data-slot="accordion"
                >
                  <div
                    class="border-b last:border-b-0 border-none"
                    data-orientation="vertical"
                    data-slot="accordion-item"
                    data-state="closed"
                  >
                    <h3
                      class="flex"
                      data-orientation="vertical"
                      data-state="closed"
                    >
                      <button
                        aria-controls="radix-_r_a_"
                        aria-expanded="false"
                        class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-sm font-semibold text-primary hover:text-primary/80 py-2 px-0"
                        data-orientation="vertical"
                        data-radix-collection-item=""
                        data-slot="accordion-trigger"
                        data-state="closed"
                        id="radix-_r_9_"
                        type="button"
                      >
                        Store Details
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </h3>
                    <div
                      aria-labelledby="radix-_r_9_"
                      class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                      data-orientation="vertical"
                      data-slot="accordion-content"
                      data-state="closed"
                      hidden=""
                      id="radix-_r_a_"
                      role="region"
                      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </label>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px my-3"
            data-orientation="horizontal"
            data-slot="separator"
            role="none"
          />
        </li>
        <li
          class="py-3"
        >
          <label
            class="flex items-start gap-3"
            for="selectedStore-_r_7_-store-2"
          >
            <button
              aria-checked="false"
              aria-describedby="store-info-store-2"
              class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 mt-1"
              data-radix-collection-item=""
              data-slot="radio-group-item"
              data-state="unchecked"
              id="selectedStore-_r_7_-store-2"
              role="radio"
              tabindex="-1"
              type="button"
              value="store-2"
            />
            <div
              class="grid grid-cols-2 gap-2 md:grid-cols-[260px_1fr_auto]"
              id="store-info-store-2"
            >
              <div
                class="col-span-1"
              >
                <div
                  class="text-lg font-semibold text-left"
                >
                  Uptown Store
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-1 md:col-start-2"
              >
                <div
                  class="text-sm text-muted-foreground text-left"
                >
                  <div>
                    456 Oak Avenue
                  </div>
                  <div>
                    San Francisco, CA 94103
                  </div>
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-1 md:col-start-1 md:mt-2"
              >
                <div
                  class="text-muted-foreground text-left text-xs flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-map-pin size-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                    />
                    <circle
                      cx="12"
                      cy="10"
                      r="3"
                    />
                  </svg>
                  5.20 km away
                </div>
              </div>
              <div
                class="col-span-2 md:col-span-2 md:col-start-2"
              >
                <div
                  class="w-full"
                  data-orientation="vertical"
                  data-slot="accordion"
                >
                  <div
                    class="border-b last:border-b-0 border-none"
                    data-orientation="vertical"
                    data-slot="accordion-item"
                    data-state="closed"
                  >
                    <h3
                      class="flex"
                      data-orientation="vertical"
                      data-state="closed"
                    >
                      <button
                        aria-controls="radix-_r_d_"
                        aria-expanded="false"
                        class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-sm font-semibold text-primary hover:text-primary/80 py-2 px-0"
                        data-orientation="vertical"
                        data-radix-collection-item=""
                        data-slot="accordion-trigger"
                        data-state="closed"
                        id="radix-_r_c_"
                        type="button"
                      >
                        Store Details
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m6 9 6 6 6-6"
                          />
                        </svg>
                      </button>
                    </h3>
                    <div
                      aria-labelledby="radix-_r_c_"
                      class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                      data-orientation="vertical"
                      data-slot="accordion-content"
                      data-state="closed"
                      hidden=""
                      id="radix-_r_d_"
                      role="region"
                      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </label>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
